--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,44 @@
-# Ignore node_modules directory
 node_modules/
+
+# Ignore npm debug log files
+npm-debug.log*
+
+# Ignore environment-specific configuration files
+.env
+
+# Ignore build output directories
+/dist
+/build
+
+# Ignore IDE or editor-specific files
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 .DS_Store
-.vscode
+
+# Ignore system files that might cause conflicts
+Thumbs.db
+
+# Ignore package-lock.json for projects using npm
+package-lock.json
+
+# Ignore yarn.lock for projects using Yarn
+yarn.lock
+
+# Ignore any sensitive or generated files
+*.pem
+*.key
+*.cert
+
+# Ignore any compiled code or binaries
+*.dll
+*.exe
+*.log
+*.bin
+
+# Ignore any backup files
+*~
+
