--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ npm-debug.log*
 .env
 
 # Ignore build output directories
-/dist
-/build
+dist/
+build/
 
 # Ignore IDE or editor-specific files
 .idea/
@@ -18,6 +18,7 @@ npm-debug.log*
 *.sln
 *.sw?
 .DS_Store
+.vscode/
 
 # Ignore system files that might cause conflicts
 Thumbs.db
